--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "graphwear",
+  "homepage": "https://sasikiran.github.io/graphwear-assesment",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +44,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "env-cmd": "^10.1.0",
+    "gh-pages": "^6.3.0",
     "postcss-nesting": "^12.1.5",
     "tailwindcss": "^3.3.3"
   }
