--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphwear",
-  "homepage": "https://shashikanduri.github.io/graphwear-assesment",
+  "homepage": "https://shashikanduri.github.io/graphwear",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
