--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "material-react-table": "^2.12.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
