--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.1.0",
     "axios": "^1.5.0",
+    "dayjs": "^1.11.13",
     "firebase": "^11.6.0",
     "material-react-table": "^2.12.1",
     "react": "^18.2.0",
